syntax = "proto3";

package hello;

service Hello {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string msg = 1;
}
